--- a/tabletag.html
+++ b/tabletag.html
@@ -4,7 +4,7 @@
 </head>
 <body>
 	<table border="1" width="20%">
-	<thead>
+	<thead bgcolor="yellow">
 		<tr>
 		<th>No</th>
 		<th>Item</th>
@@ -14,14 +14,14 @@
 	</tr>
 	</thead>
 
-	<tbody>
+	<tbody  bgcolor="green" align="center">
 		<tr>
-		<td>1</td>
-		<td>Coffee</td>
-		<td>1</td>
-		<td>pcs</td>
-		<td>100</td>
-	</tr>
+			<td>1</td>
+			<td>Coffee</td>
+			<td>1</td>
+			<td>pcs</td>
+			<td>100</td>
+		</tr>
 	<tr>
 		<td>2</td>
 		<td>Rice</td>
@@ -29,7 +29,7 @@
 		<td>box</td>
 		<td>3000</td>
 	</tr>
-	<tr>
+	<tr >
 		<td>3</td>
 		<td>Water</td>
 		<td>1</td>
@@ -37,10 +37,13 @@
 		<td>500</td>
 	</tr>
 	</tbody>
-	<tfoot>
+
+	<tfoot  bgcolor="#7e83e0" >
 		<tr>
-			<td>Total</td>
+		
+			<td colspan="4" align="right">Total</td>
 			<td>3600</td>
+			
 		</tr>
 	</tfoot>
 
