--- a/divdesign.html
+++ b/divdesign.html
@@ -24,5 +24,11 @@
 			<p>Hello Srilanka</p>
 		</div>
 
+		<hr/>
+
+		<div class="divfour">
+			<p>Hello Indonesia</p>
+		</div>
+
 	</body>
 </html>
